--- a/Notebook/Problema4.ipynb
+++ b/Notebook/Problema4.ipynb
@@ -1,22 +1,51 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'cPickle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-d37643d47b2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mprint_function\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcPickle\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmisc\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mimread\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: No module named 'cPickle'"
-     ]
-    }
-   ],
+   "source": [
+    "Problema 4.\n",
+    "\n",
+    "Para el desarrollo del modelo, que permita clasificar las imágenes de CIFAR10, se tomó en consideración\n",
+    "cada uno de los parámetros estudiados en el problema 3. Antes de realizar a implementación, se estudiaron \n",
+    "diversos modelos que permiten una buena clasificación de imagenes, pero la mayoría, por no decir todos, realizaban\n",
+    "sus redes en base a redes convolusionales, lo cual parece ser o mejor en este caso.\n",
+    "Como es necesario, por ahora, realizar redes feed forward, se utilizaron los parámetros, que mejor resultado \n",
+    "mostraron en el problema anterior, es decir, cada parámetro junto al valor, que según lo observado, influía en una\n",
+    "mejor y más rápida convergencia.\n",
+    "Es por eso que, además de realizar un escalamiento de los datos, se utilizaron factores de Weight decay, un learning rate bajo, un factor\n",
+    "de dropout en cada una de las capas ocultas donde cada una tenía una función de activación RELU, función que mostró\n",
+    "mejores resultados en comparación a SIGMOID. \n",
+    "Se utilizó además, un optimizador SGD, que nuevamente, en comparación a los otros, \n",
+    "dió resultados de convergencia más rápido. (lr=0.001, decay=1e-6, momentum = 0.8) Este optimizador, utilizó un learning rate de 0.001,\n",
+    "uno no tan chico, ni tan grande, un learning decay de 1e-6 y un momentum de 0,8. No se utilizo el momento clásico, puesto que no se\n",
+    "demostró una gran mejoría.\n",
+    "Se realizaron diversas pruebas utilizando para ello, un conjunto de validación de 10000 para training, y 3000 de testing. Después \n",
+    "de algunas pruebas, se llega a la conclusión que, es necesario darle un gran número de capas ocultas, para que así se logre un mayor\n",
+    "nivel de abstracción con las imágenes. Esto puede ser ya que de por si, las imagenes, al trabajar de pixel a pixel, tienen un nivel\n",
+    "de no linealidad muy alta. Por lo que se le aumentó significativamente el número de estas, utilizando finalmente, 10 capas ocultas.\n",
+    "Para la cantidad de epochs, se pensó que quizás un número alto, permetiría obtener un mejor resultado, lamentablemente no fue así. Pero \n",
+    "finalmente, se le asignó un total de 700 epochs.\n",
+    "\n",
+    "Para el proceso de entrenamiento final, el modelo se implementó en un servidor, el cual gracias a la empresa donde uno de \n",
+    "nosotros trabaja. Hacia este servidor, se puede acceder vía ssh, por lo que se configuró el ambiente, para que se puedan entrenar redes\n",
+    "utilizando python y keras. Una vez listo, se realizó un pequeño script, para que la red se mantenga entrenando, aún después de \n",
+    "que el usuario cerrara la sesión. \n",
+    "El entrenamiento total, tomó alrededor de 4 días. Cerca del primer día, la red comenzó a tener overfitting, es decir, el valor de error\n",
+    "en el entrenamiento comenzó a ser muy bajo, y el de accuracy en entrenamiento, casi cercano a 1 (100%), pero no así en el caso de los \n",
+    "valores de testeo, estos comenzaron a estancarse en un 60% de exactitud.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "import cPickle as pickle\n",
@@ -152,6 +181,17 @@
     "plt.xlabel('epoch')\n",
     "plt.legend(['acc train','acc test'], loc='upper left')\n",
     "plt.savefig('accProblema4.jpg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Lamentablemente no se logró entrenar la red, con la mejora de atributos expuestas en el punto d), por lo que no sé logró realizar\n",
+    "una comparación entre ambos resultados. Aún así, se sub entiende, que al mejorar los parámetros que utiliza el modelo, se deberían \n",
+    "lograr mejores resultados con la red.\n"
    ]
   },
   {
