--- a/Notebook/parte4.ipynb
+++ b/Notebook/parte4.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "Problema 4.\n",
     "\n",
+    "En primer lugar, github no permite subir archivos de mas de 25 mb, por lo tanto no se pueden subir los batches.\n",
+    "Asi que le pido por favor que descarge el notebook y ponga los batches (supongo que los debe tener) en una carpeta llamada\n",
+    "data y que este al lado del notebook, gracias.\n",
+
     "Para el desarrollo del modelo, que permita clasificar las imágenes de CIFAR10, se tomó en consideración\n",
     "cada uno de los parámetros estudiados en el problema 3. Antes de realizar a implementación, se estudiaron \n",
     "diversos modelos que permiten una buena clasificación de imagenes, pero la mayoría, por no decir todos, realizaban\n",
